# mlx-serve

./: .env  .gitignore  README.md  pyproject.toml
docs/: retrieval-worker-update.md
docs/wiki/: Embedding-Model-Benchmark-MLX-vs-Ollama.md
docs/work_plans/: 001-mlx-serve-mvp.md  002-mlx-serve-production-improvements.md  003-mlx-serve-v0.2-enhancements.md  004-embeddings-api-openai-compatibility.md
homebrew-mlx-serve/: README.md
homebrew-mlx-serve/Formula/: mlx-serve.rb
src/mlx_serve/: __init__.py  __main__.py  cli.py  config.py  server.py
src/mlx_serve/core/: __init__.py  batch_processor.py  config_loader.py  inference_control.py  metrics.py  mlx_memory.py  model_manager.py  pid_manager.py  process_title.py  quantizer.py  retrieval_model_routing.py  retrieval_workers.py  runtime_topology.py  service_manager.py  system_guard.py
src/mlx_serve/routers/: __init__.py  audio.py  chat.py  embeddings.py  images.py  models.py  rerank.py  retrieval_proxy.py  tokenize.py
tests/: __init__.py  conftest.py  test_batch_processor.py  test_cache.py  test_config.py  test_embeddings.py  test_inference_control.py  test_mlx_memory.py  test_models.py  test_pid_manager.py  test_process_title.py  test_rerank.py  test_retrieval_workers.py  test_server_topology.py  test_service_manager.py  test_system_guard.py  test_tokenize.py
