[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlx-serve"
version = "0.1.0"
description = "MLX-based embedding and reranking server with OpenAI-compatible API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "mlx-serve contributors" }
]
keywords = ["mlx", "embeddings", "reranking", "openai", "api", "apple-silicon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "typer>=0.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "mlx>=0.5.0",
    "mlx-embeddings>=0.0.1",
    "mlx-lm>=0.5.0",
    "huggingface-hub>=0.19.0",
    "rich>=13.0.0",
    "cachetools>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]

[project.scripts]
mlx-serve = "mlx_serve.cli:app"

[project.urls]
Homepage = "https://github.com/mlx-serve/mlx-serve"
Repository = "https://github.com/mlx-serve/mlx-serve"

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_serve"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
