[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlx-serve"
version = "0.1.0"
description = "MLX-based multimodal AI server with OpenAI-compatible API (LLM, Vision, Audio, Image Generation)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "mlx-serve contributors" }
]
keywords = ["mlx", "llm", "embeddings", "reranking", "vision", "audio", "tts", "stt", "image-generation", "openai", "api", "apple-silicon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Web Framework
    "fastapi",
    "uvicorn[standard]",
    "sse-starlette",

    # CLI & Config
    "typer",
    "pydantic",
    "pydantic-settings",
    "pyyaml",
    "rich",

    # MLX Core
    "mlx",
    "mlx-lm",
    "mlx-embeddings",

    # MLX Multimodal
    "mlx-vlm",
    "mlx-audio",
    "mflux",

    # Utils
    "huggingface-hub",
    "cachetools",
    "prometheus-client",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]

[project.scripts]
mlx-serve = "mlx_serve.cli:app"

[project.urls]
Homepage = "https://github.com/mlx-serve/mlx-serve"
Repository = "https://github.com/mlx-serve/mlx-serve"

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_serve"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
