[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlx-serve"
version = "0.1.0"
description = "MLX-based multimodal AI server with OpenAI-compatible API (LLM, Vision, Audio, Image Generation)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "mlx-serve contributors" }
]
keywords = ["mlx", "llm", "embeddings", "reranking", "vision", "audio", "tts", "stt", "image-generation", "openai", "api", "apple-silicon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Web Framework
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "sse-starlette>=3.2.0",

    # CLI & Config
    "typer>=0.21.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
    "rich>=14.3.2",

    # MLX Core
    "mlx>=0.30.5",
    "mlx-lm>=0.30.5",
    "mlx-embeddings>=0.0.5",

    # MLX Multimodal
    "mlx-vlm>=0.3.10",
    "mlx-audio>=0.3.1",
    "mflux>=0.15.5",

    # Utils
    "huggingface-hub>=1.3.7",
    "cachetools>=7.0.0",
    "prometheus-client>=0.24.1",
    "Pillow>=11.3.0",
    "soundfile>=0.13.1",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.28.1",
    "ruff>=0.4.0",
]
# Required for VLM model conversion (Qwen-VL, etc.)
vlm-convert = [
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[project.scripts]
mlx-serve = "mlx_serve.cli:app"

[project.urls]
Homepage = "https://github.com/mlx-serve/mlx-serve"
Repository = "https://github.com/mlx-serve/mlx-serve"

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_serve"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
